--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,5 +1,10 @@
 @import "./../../../styles.variables";
 
+:host {
+  position: fixed;
+  width: 100%;
+}
+
 header {
   background-color: #333; // provv
   display: flex;
@@ -20,10 +25,9 @@ header {
 .header--button {
   display: flex;
   flex-flow: column;
-
-  transition: all .5s ease;
   span {
     display: inline-block;
+    position: relative;
     width: 25px;
     margin-bottom: 8px;
 
@@ -40,7 +44,6 @@ header {
   span {
     transform: rotate(-45deg);
     &:first-child {
-      position: relative;
       top: 9px;
       transform: rotate(45deg);
     }
