--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,3 +1,7 @@
-<p>
-  spinner works!
-</p>
+<div class="showbox">
+  <div class="spinner--loader">
+    <svg class="circular" viewBox="25 25 50 50">
+      <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+</div>
