dev: setup router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-spinner></app-spinner>
-<app-video></app-video>
+<!-- <app-spinner></app-spinner> -->
+
+<router-outlet></router-outlet>
