--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,3 +7,6 @@
     <span></span><span></span><span></span>
   </div>
 </header>
+
+<a routerLink="/" routerLinkActive="active">Crisis Center</a>
+<a routerLink="/list" routerLinkActive="active">Heroes</a>
