--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,8 @@
     (click)="openList()">
     <span></span><span></span><span></span>
   </div>
+
 </header>
 
-<a routerLink="/" routerLinkActive="active">Crisis Center</a>
-<a routerLink="/list" routerLinkActive="active">Heroes</a>
+<!-- <a routerLink="/" routerLinkActive="active">Crisis Center</a>
+<a routerLink="/list" routerLinkActive="active">Heroes</a> -->
