--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -1,10 +1,12 @@
 @import "./../../../styles.variables";
 
 :host {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   background-color: rgba(0,0,0,.3);
 }
 
